--- a/package.json
+++ b/package.json
@@ -2,34 +2,37 @@
   "name": "calendar",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.5",
-    "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
-    "react": "^18.2.0",
-    "react-big-calendar": "^1.12.2",
-    "react-datepicker": "^6.9.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-redux": "^9.1.2",
+    "@reduxjs/toolkit": "^1.8.2",
+    "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
+    "react": "^18.0.0",
+    "react-big-calendar": "^0.40.1",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
-    "sweetalert2": "^11.11.0"
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "babel-jest": "^28.1.1",
+    "dotenv": "^16.0.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
+    "vite": "^2.9.9"
   }
 }
